@@ -1,4 +1,6 @@
 == 1.0.0 The Big release
+ * Runner now remembers -r, -D and -V parameters so that clustered servers inherit those and
+   `restart` keep your parameters.
  * Make Set-Cookie header, in Rails adapter, compatible with current Rack spec [Pedro Belo]
    [#73, state:resolved]
  * Add --no-epoll option to disable epoll usage on Linux [#61 state:resolved]
